--- a/index.html
+++ b/index.html
@@ -5,15 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link rel="stylesheet" href="src/style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/f6fef75e93.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="container">
+      <div id="search-btn" class="row">
+        <div class="col-4">
+          <input
+            type="search"
+            placeholder="Type a city.."
+            class="form-control"
+            id="city-input"
+            autocomplete="off"
+          />
+        </div>
+        <div class="col-2">
+          <div
+            class="btn-group"
+            role="group"
+            aria-label="Basic outlined example"
+          >
+            <button type="button" class="btn btn-outline-primary">
+              <i class="fas fa-search"></i>
+            </button>
+            <button type="button" class="btn btn-outline-primary">
+              <i class="fas fa-map-marker"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div id="date-location" class="row">
+        <div class="col-4">
+          <h1>San Francisco, CA</h1>
+        </div>
+        <div class="col-8">
+          <ul>
+            <li>March 12, 2021</li>
+            <li>8:03AM</li>
+          </ul>
+        </div>
+      </div>
+
+      <div id="weather" class="row">
+        <div class="col-4">
+          <ul>
+            <li>
+              <strong>55°F</strong>
+            </li>
+            <li>Clear</li>
+          </ul>
+        </div>
+        <div id="conditions" class="col-8">
+          <ul>
+            <li>Humidity</li>
+            <li>Wind</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <script src="src/app.js"></script>
   </body>
 </html>
