--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="src/style.css" />
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,20 +16,22 @@
       src="https://kit.fontawesome.com/f6fef75e93.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
+      <div class ="wrapper">
       <div id="search-btn" class="row">
-        <div class="col-4">
+        <div class="col-7">
           <input
             type="search"
             placeholder="Type a city.."
-            class="form-control"
+            class="form-control "
             id="city-input"
             autocomplete="off"
           />
         </div>
-        <div class="col-2">
+        <div class="col-5">
           <div
             class="btn-group"
             role="group"
@@ -45,10 +47,10 @@
         </div>
       </div>
       <div id="date-location" class="row">
-        <div class="col-4">
-          <h1>San Francisco, CA</h1>
+        <div class="col-6">
+          <h2>San Francisco, CA</h2>
         </div>
-        <div class="col-8">
+        <div class="col-6">
           <ul>
             <li>March 12, 2021</li>
             <li>8:03AM</li>
@@ -57,7 +59,7 @@
       </div>
 
       <div id="weather" class="row">
-        <div class="col-4">
+        <div class="col-6">
           <ul>
             <li>
               <strong>55°F</strong>
@@ -65,7 +67,7 @@
             <li>Clear</li>
           </ul>
         </div>
-        <div id="conditions" class="col-8">
+        <div id="conditions" class="col-6">
           <ul>
             <li>Humidity</li>
             <li>Wind</li>
