--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         </div>
         <div id = "left-side" class="col-6">
           <ul>
-            <li id="date">March 12, 2021</li>
-            <li id="time">8:03AM</li>
+            <li><span id="date"></span></li>
+            <li id="time"></li>
             <li>Humidity: <span id="humidity"></span>%</li>
-            <li id="lowercase">Wind: <span id="wind"></span>mph</li>
+            <li>Wind: <span id="wind"></span><span id="lowercase">mph</span></li>
           </ul>
         </div>
       </div>
@@ -102,6 +102,6 @@
       
     </div>
 
-    <script src="src/app.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
