add weather icon

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div id="right-side" class="row">
         <div class="col-6">
           <h3 id="city"></h3>
+          <img src= "" alt ="clear" id ="icon" class= "float-left"/>
             <strong id="temperature"></strong>
           <span class ="units">
             <a href="#" id="fahrenheit-link">°F</a> |
