fahrenheit & celsius link conversion

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
           <img src= "" alt ="" id ="icon" class= "float-left"/>
             <strong id="temperature"></strong>
           <span class ="units">
-            <a href="#" id="fahrenheit-link">°F</a> |
-             <a href="#" id="celsius-link" class="active">°C</a> 
+            <a href="#" id="fahrenheit-link"class="active">°F</a> |
+             <a href="#" id="celsius-link" >°C</a> 
             </span>
-                <h5 id="description">Clear</h5>          
+                <h5 id="description"></h5>          
         </div>
         <div id = "left-side" class="col-6">
           <ul>
