Build 12 hour forecast

--- a/index.html
+++ b/index.html
@@ -72,35 +72,9 @@
           </ul>
         </div>
       </div>
-      <div id = "forecast" class="row">
-        <div class ="col-3">
-          <ul>
-            <li><strong>Monday</strong></li>
-         <li>50 °F</li>
-          <li>Clear</li>
-        </ul>
-        </div>
-       <div class ="col-3">
-        <ul>
-          <li><strong>Tuesday</strong></li>
-       <li>49 °F</li>
-        <li>Clear</li>
-      </ul>
-          </div>
-          <div class ="col-3">
-            <ul>
-              <li><strong>Wednesday</strong></li>
-           <li>52 °F</li>
-            <li>Clear</li>
-          </ul>
-          </div>
-          <div class ="col-3">
-            <ul>
-              <li><strong>Thursday</strong></li>
-           <li>55 °F</li>
-            <li>Clear</li>
-          </ul>
-          </div>
+      <div id = "title">Forecast for the next 12 hours</div>
+      <div id = "forecast" class="row weather-forecast">
+      
       </div>
       
     </div>
